# fastapi_do_zero

./: .gitignore
fast_zero/: README.md  compose.yaml  pyproject.toml
fast_zero/migrations/: env.py
fast_zero/migrations/versions/: 0f6240dadc7b_updated_at_field_updated_in_users_table.py  0ff851769ce8_create_todos_table.py  2326534d06c5_create_users_table.py  2745d29c6886_updated_at_added_to_model_user.py  506787aec498_created_at_and_updated_att_added_in_.py  c50d29b03716_updated_at_server_default_added.py
fast_zero/src/fast_zero/: app.py  models.py  schema.py  security.py
fast_zero/src/fast_zero/routers/: auth.py  todos.py  users.py
fast_zero/tests/: conftest.py  test_app.py  test_db.py  test_todos.py  test_user.py
